# RobotInterfaceBoard

Jetson/Integrated system/: CMakeLists.txt  Conv2D.cu  Conv2D.cuh  FullyConnected.cu  FullyConnected.cuh  Layer.cuh  MaxPool2D.cu  MaxPool2D.cuh  ModelLoadingHelper.cu  ModelLoadingHelper.cuh  ModelLoadingHelper.h  aiHelperUtils.cpp  aiHelperUtils.cu  aiHelperUtils.cuh  aiHelperUtils.h  main.cpp.dis.cpp  main.cu  markerSystem.cu  markerSystem.cuh  navigationHelper.cpp  navigationHelper.h  navigationSystem.cpp  navigationSystem.h  pid.cpp  pid.h  positionController.cpp  positionController.h  robotController.cu  robotController.cuh  serialHelper.cpp  serialHelper.h  visualServoing.cpp  visualServoing.h  yolo.cu  yolo.cuh
Jetson/Integrated system/marker/: RDP.cu  RDP.cuh  applyKernelToImage.cu  applyKernelToImage.cuh  applySobel.cu  applySobel.cuh  blurImage.cu  blurImage.cuh  canny.cu  canny.cuh  contourDetector.cu  contourDetector.cuh  imageResizer.cu  imageResizer.cuh  imageToGreyConverter.cu  imageToGreyConverter.cuh  markerIsolator.cu  markerIsolator.cuh  perspectiveSolver.cu  perspectiveSolver.cuh
